GNOME Bugzilla – Bug 706686
xrandr: crash on login in gnome-ostree buildmaster
Last modified: 2013-08-23 21:39:25 UTC
Created attachment 252937 [details] stack See attached stack. Started happening recently.
Created attachment 252939 [details] [review] xrandr: Correctly initialize GError
Review of attachment 252939 [details] [review]: Yep.
Review of attachment 252939 [details] [review]: looks good to me
Attachment 252939 [details] pushed as 3a44135 - xrandr: Correctly initialize GError