xrandr: Correctly initialize GError

https://bugzilla.gnome.org/show_bug.cgi?id=706686